// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link@desktop client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<a
  class="Link mix"
  href="www.test.ru"
>
  Content
</a>
`;

exports[`Link@desktop client environment должен рендерить псевдо ссылку 1`] = `
<a
  class="Link Link_pseudo"
  href="www.test.ru"
>
  Content
</a>
`;

exports[`Link@desktop server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<a
  class="Link mix"
  href="www.test.ru"
>
  Content
</a>
`;

exports[`Link@desktop server environment должен добавлять в ссылку с target="_blank" атрибут rel="noopener" 1`] = `
<a
  class="Link"
  href="www.test.ru"
  rel="nofollow noopener"
  target="_blank"
>
  Content
</a>
`;

exports[`Link@desktop server environment должен рендерить псевдо ссылку 1`] = `
<a
  class="Link Link_pseudo"
  href="www.test.ru"
>
  Content
</a>
`;
